--- a/src/app/components/shop/details/details.component.html
+++ b/src/app/components/shop/details/details.component.html
@@ -2,8 +2,8 @@
 <div *ngIf="productDetails">
 <section class="text-gray-700 body-font overflow-hidden bg-white">
   <div class="container px-5 py-24 mx-auto">
-    <div class="lg:w-4/5 mx-auto flex flex-wrap">
-      <img alt="ecommerce" class="lg:w-1/2 w-full object-cover object-center rounded border border-gray-200" [src]="productDetails.image">
+    <div class="lg:w-4/5 lg:pl-24 mx-auto flex flex-wrap">
+      <img alt="ecommerce" class="lg:w-1/3 w-full object-cover object-center rounded border border-gray-200" [src]="productDetails.image">
       <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
         <h2 class="text-sm title-font text-gray-500 tracking-widest">{{ productDetails.category }}</h2>
         <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">{{ productDetails.title }}</h1>
@@ -27,9 +27,10 @@
             <span class="text-gray-600 ml-3">4 Reviews</span>
           </span>
         </div>
-        <p class="leading-relaxed">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
-        <div class="flex">
+        <p class="leading-relaxed">Helvetica tattooed schlitz, irony kinfolk art party poke normcore leggings. Lomo before they sold out brunch, prism health goth beard small batch pickled. Church-key brooklyn letterpress, disrupt activated charcoal banjo fashion axe af bushwick raw denim dreamcatcher tumeric.</p>
+        <div class="flex pt-8">
           <span class="title-font font-medium text-2xl text-gray-900">{{ productDetails.price | currency }}</span>
+          <button routerLink="/home" class="flex ml-auto text-white bg-gray-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-gray-500 rounded-xl">Volver</button>
           <button (click)="addCart(productDetails)" routerLink="/shopping" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl">Agregar al carrito</button>
         </div>
       </div>
