--- a/src/app/components/shop/products/products.component.css
+++ b/src/app/components/shop/products/products.component.css
@@ -1,3 +1,35 @@
+.imge {
+  background-image: url(../../../../images/image-presentacion3.jpg);
+  height: 50vh;
+  backdrop-filter: blur(1px);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .imge h1 {
+    font-size: 3.5vw;
+    min-width: 28px;
+    margin-bottom: 10px;
+  }
+  .imge p {
+    font-size: 2vw;
+    min-width: 16px;
+    margin-bottom: 20px;
+    max-width: 80%;
+  }
+
+  .imge a {
+    font-size: 1.8vw;
+    min-width: 14px;
+    padding: 12px 25px;
+  }
+}
+
 @media (max-width: 768px) {
   #Projects.grid-responsive {
     display: grid;
