--- a/src/app/components/shop/products/products.component.css
+++ b/src/app/components/shop/products/products.component.css
@@ -1,58 +1,69 @@
 .imge {
   background-image: url(../../../../images/image-presentacion3.jpg);
-  height: 50vh;
+  height: 40vh;
   backdrop-filter: blur(1px);
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   text-align: center;
 }
 
 @media (max-width: 768px) {
   .imge h1 {
-    font-size: 3.5vw;
+    font-size: 5.5vw;
     min-width: 28px;
     margin-bottom: 10px;
   }
   .imge p {
-    font-size: 2vw;
+    font-size: 3vw;
     min-width: 16px;
     margin-bottom: 20px;
     max-width: 80%;
   }
 
   .imge a {
-    font-size: 1.8vw;
+    font-size: 3.8vw;
     min-width: 14px;
-    padding: 12px 25px;
+    padding: 6px 20px;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 441px) and (max-width: 768px) {
   #Projects.grid-responsive {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 15px;
     justify-items: center;
     padding: 0 50px;
-    padding-left: 10px;
+    margin-left: auto;
+    max-width: 100%;
   }
 
   .w-72 {
-    max-width: 96%;
+    width: 220px;
     height: auto;
+    overflow: hidden;
   }
 
   .w-72 img {
-    max-width: 100%;
-    height: auto;
+    width: 80%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
 
   .w-72:hover {
     transform: none;
     box-shadow: none;
+  }
+
+
+  .imge a {
+    font-size: 3.8vw;
+    min-width: 14px;
+    padding: 14px 20px;
   }
 }
 
@@ -61,17 +72,17 @@
   #Projects.grid-responsive {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    gap: 30px;
+    gap: 20px;
     justify-items: center;
     padding: 0 5px;
   }
 
   .w-72 {
     width: 100%;
-    max-width: 180px;
+    max-width: 160px;
     text-align: center;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 10px;
     height: auto;
   }
 
@@ -82,3 +93,4 @@
     object-position: center;
   }
 }
+
