--- a/src/app/components/shop/products/products.component.html
+++ b/src/app/components/shop/products/products.component.html
@@ -1,12 +1,12 @@
-<div class="imge">
-  <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-4xl dark:text-white">Discover Our Innovative Products</h1>
-  <p class="mb-6 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-100">Explore our range of cutting-edge products designed to enhance your life and solve everyday challenges.</p>
+<div class="imge pb-20">
+  <h1 class="mb-4 text-3xl md:text-4xl lg:text-5xl xl:text-4xl font-extrabold leading-none tracking-tight text-gray-900 dark:text-white">Discover Our Innovative Products</h1>
+  <p class="mb-6 text-base md:text-lg lg:text-xl xl:text-lg font-normal text-gray-500 sm:px-16 xl:px-48 dark:text-gray-100">Explore our range of cutting-edge products designed to enhance your life and solve everyday challenges.</p>
   <a href="#" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
     Shop Now
     <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-  </svg>
-</a>
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+    </svg>
+  </a>
 </div>
 
 
@@ -19,12 +19,12 @@
 </ng-container>
 
 <ng-template #products>
-  <section id="Projects"
-  class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mb-5 grid-responsive" style="margin-top: 100px; margin-bottom: 100px">
-  <div *ngFor="let item of listaProductos; let i = index">
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-          <img [src]="item.image"
-                  alt="Product" class="h-50 w-72 object-cover rounded-t-xl"/>
+  <section id="Projects" class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mb-5 grid-responsive" style="margin-top: 30px; margin-bottom: 100px">
+    <div *ngFor="let item of listaProductos; let i = index">
+      <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
+        <div class="h-52 flex justify-center items-center">
+          <img [src]="item.image" alt="Product" class="object-contain h-full max-w-full" (click)="detailProduct(item.id)"/>
+        </div>
           <div class="px-4 py-3 w-72">
               <span class="text-gray-400 mr-3 uppercase text-xs">{{ item.category }}</span>
               <p class="text-lg font-bold text-black truncate block capitalize">{{ item.title }}</p>
@@ -33,7 +33,7 @@
                   <del>
                       <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
                   </del>
-                  <div (click)="onClick(item)" class="ml-auto cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                  <div (click)="addCart(item)" class="ml-auto cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                           fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
                           <path fill-rule="evenodd"
                               d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
@@ -46,7 +46,6 @@
   </div>
 </div>
 </section>
-
 
 <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
 <script>
