--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -26,14 +26,22 @@
         <div class="group lg:gap-5 gap-1 pr-4 flex items-center">
           <form action="" class="relative flex">
               <div class="container">
-                  <input type="text" name="text" class="input" required="" placeholder="Busqueda...">
-                  <div  class="icon">
+                  <input [(ngModel)]="filteredProducts" type="text" name="text" class="input" required="" placeholder="Busqueda..." (keyup.enter)="searchProducts()">
+                  <div  class="icon" (click)="searchProducts()">
                       <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                           <title>Search</title>
                           <path d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"></path>
                           <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"></path>
                       </svg>
-              </div>
+                      <div *ngIf="( searchResults() | async ) as searchProducts; else noResults">
+                        <ul>
+                          <li *ngFor="let result of searchProducts">{{ result.title }}</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <ng-template #noResults>
+
+                    </ng-template>
             </div>
           </form>
 
