--- a/src/app/components/shop/details/details.component.html
+++ b/src/app/components/shop/details/details.component.html
@@ -84,7 +84,7 @@
 
 
 <!-- cart message -->
-<div *ngIf="mensajeExito && ( productDetails || detailProducts )" class="bg-green-200 text-green-800 p-4 mb-4 rounded">
+<div *ngIf="mensajeExito && ( productDetails || detailProducts )" class="bg-green-200 text-green-800 mb-4 rounded">
   <div class="fixed z-10 inset-0 overflow-y-auto">
     <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
         <div class="fixed inset-0 transition-opacity">
