--- a/src/app/components/shop/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shop/shopping-cart/shopping-cart.component.html
@@ -9,14 +9,14 @@
 </style>
 
 <body>
-<div class="bg-gray-100 mt-4 pt-20 mb-6 px-4 md:px-8 lg:px-16 xl:px-20">
+<div class="bg-gray-100 mt-4 pt-20 pb-6 px-4 md:px-8 lg:px-16 xl:px-20">
   <h1 class="mb-10 text-center text-3xl font-bold">Cart Items</h1>
   <div class="mx-auto max-w-5xl justify-center px-6 md:flex md:space-x-6 xl:px-0">
     <div class="rounded-lg md:w-2/3">
 
-
-      <div *ngFor="let product of products; let i = index" class="justify-between mb-6 rounded-lg bg-white p-6 shadow-md sm:flex sm:justify-start">
-        <img [src]="product.product.image" alt="product-image" class="w-full rounded-lg sm:w-40" />
+<ng-container *ngIf="products.length > 0; else cartAdd">
+  <div *ngFor="let product of products; let i = index" class="justify-between mb-6 rounded-lg bg-white p-6 shadow-md sm:flex sm:justify-start">
+      <img [src]="product.product.image" alt="product-image" class="w-full rounded-lg sm:w-40" />
         <div class="sm:ml-4 sm:flex sm:w-full sm:justify-between">
           <div class="mt-5 sm:mt-0">
             <h2 class="text-lg font-bold text-gray-900">{{ product.product.title }}</h2>
@@ -37,9 +37,11 @@
           </div>
         </div>
       </div>
+    </ng-container>
+
     </div>
     <!-- Sub total -->
-    <div class="mt-6 h-full rounded-lg border bg-white p-6 shadow-md md:mt-0 md:w-1/3">
+    <div *ngIf="total > 0" class="mt-6 h-full rounded-lg border bg-white p-6 shadow-md md:mt-0 md:w-1/3">
       <div class="mb-2 flex justify-between">
         <p class="text-gray-700">Subtotal</p>
         <p class="text-gray-700">${{ total.toFixed(2) }}</p>
@@ -57,12 +59,18 @@
         </div>
       </div>
       <button class="mt-6 w-full rounded-md bg-blue-500 py-1.5 font-medium text-blue-50 hover:bg-blue-600">Check out</button>
-      <div class="sm:pl-0">
+      <div class="sm:pl-0 flex flex-col items-center justify-center">
         <p class="text-center text-lg mt-6 whitespace-normal lg:whitespace-nowrap">Aceptamos todos los medios de pagos</p>
-        <img src="https://www.comafi.com.ar/Multimedios/imgs/900_540.jpg" alt="pagos">
+        <img src="https://www.comafi.com.ar/Multimedios/imgs/900_540.jpg" alt="pagos" class="mx-auto">
       </div>
     </div>
   </div>
 </div>
 </body>
 
+
+<ng-template #cartAdd>
+  <div class="justify-between mb-3 sm:mb-6 text-center rounded-lg bg-white p-6 shadow-md">
+    <h1 class="text-gray-900 text-3xl font-bold">El carrito está vacío!</h1>
+  </div>
+</ng-template>
