--- a/src/app/components/main-page/card-secondary/card-secondary.component.html
+++ b/src/app/components/main-page/card-secondary/card-secondary.component.html
@@ -15,7 +15,7 @@
             <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">{{ merch.title }}</h3>
             <div class="absolute bottom-0 pb-6">
               <button class="hover-button" (click)="addCart(merch); $event.stopPropagation()">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+                <span class="text-white-500 font-bold underline">SHOP NOW</span>
               </button>
             </div>
           </div>
