--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -9,7 +9,7 @@
           <p class="text-lg text-secondary mt-4">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi eos debitis nostrum hic earum, accusantium quibusdam expedita. Sit et dolorem ex, ratione similique laboriosam.
           </p>
-          <button class="btn btn-outline-secondary text-lg mt-4 uppercase style-button" routerLink="/shop" >IR AL OUTLET → </button>
+          <button class="btn btn-outline-secondary text-lg mt-4 uppercase style-button" routerLink="/shop" >GO TO OUTLET → </button>
         </div>
       </div>
       <div class="md:col-span-1 flex justify-center order-1 md:order-2">
@@ -47,7 +47,7 @@
       <div class="flex flex-col items-center leading-7 text-center text-gray-900 border-0 border-gray-200">
           <h2 id="pricing"
               class="box-border m-0 text-3xl font-semibold leading-tight tracking-tight text-black border-solid sm:text-4xl md:text-5xl">
-              Oprovecha las ofertas del mes!
+              Take advantage of this month's offers!
           </h2>
           <p class="box-border mt-2 text-xl text-gray-900 border-solid sm:text-2xl">
           </p>
@@ -341,24 +341,24 @@
 <div class="grid-container">
   <div class="grid grid-cols-1 lg:grid-cols-2">
     <div class="column">
-      <h1 class="text-2xl font-bold mb-6">LA HISTORIA Y LA EVOLUCIÓN DE HORUS</h1>
-        <p>El impulso del deporte ha sido una constante en nuestras vidas, desafiándonos, uniéndonos y motivándonos a alcanzar nuestras metas. A lo largo de las décadas, Horus ha sido un compañero fiel en este viaje, acompañando a deportistas y aficionados en cada etapa de su trayectoria hacia el éxito. Desde sus modestos inicios hasta el día de hoy, nuestra marca ha encarnado la calidad, la innovación y el compromiso con un rendimiento excepcional.
+      <h1 class="text-2xl font-bold mb-6">THE HISTORY AND EVOLUTION OF HORUS</h1>
+        <p>The drive for sports has been a constant in our lives, challenging us, uniting us, and motivating us to achieve our goals. Throughout the decades, Horus has been a faithful companion on this journey, accompanying athletes and enthusiasts at every stage of their path to success. From its humble beginnings to the present day, our brand has embodied quality, innovation, and a commitment to exceptional performance.
         <br>
         <br>
-        Horus ha sido un referente para corredores, basquetbolistas, futbolistas y entusiastas del fitness en todos los rincones del mundo. Ya sea en las calles urbanas o en los senderos montañosos, nuestros productos han sido diseñados para inspirar y potenciar el desempeño de quienes los utilizan. Ya sea que busques superar tus límites personales o simplemente disfrutar de una vida activa y saludable, Horus está aquí para acompañarte en cada paso del camino.
+        Horus has been a benchmark for runners, basketball players, soccer players, and fitness enthusiasts in every corner of the world. Whether in urban streets or mountain trails, our products have been designed to inspire and enhance the performance of those who use them. Whether you seek to surpass your personal limits or simply enjoy an active and healthy lifestyle, Horus is here to accompany you every step of the way.
         <br>
         <br>
-        En Horus, respaldamos a los visionarios y a quienes desafían los límites. Estamos comprometidos con impulsar el cambio y reflexionar sobre el impacto que generamos en el mundo que nos rodea. Porque para nosotros, el deporte no es simplemente una actividad, es una forma de vida.</p>
+        At Horus, we support visionaries and those who challenge boundaries. We are committed to driving change and reflecting on the impact we make on the world around us. Because for us, sports are not just an activity, they are a way of life.</p>
     </div>
     <div class="column">
-      <h1 class="text-2xl font-bold mb-6">LA OPCION ELEGIDA MAS ELEGIDA</h1>
-      <p>El impulso del deporte ha sido una constante en nuestras vidas, desafiándonos, uniéndonos y motivándonos a alcanzar nuestras metas. A lo largo de las décadas, Horus ha sido un compañero fiel en este viaje, acompañando a deportistas y aficionados en cada etapa de su trayectoria hacia el éxito. Desde sus modestos inicios hasta el día de hoy, nuestra marca ha encarnado la calidad, la innovación y el compromiso con un rendimiento excepcional.
+      <h1 class="text-2xl font-bold mb-6">THE CHOSEN OPTION MOST SELECTED</h1>
+      <p>The drive for sports has been a constant in our lives, challenging us, uniting us, and motivating us to reach our goals. Throughout the decades, Horus has been a faithful companion on this journey, accompanying athletes and enthusiasts at every stage of their path to success. From its humble beginnings to the present day, our brand has embodied quality, innovation, and a commitment to exceptional performance.
         <br>
         <br>
-        En Horus, respaldamos a los visionarios y a quienes desafían los límites. Estamos comprometidos con impulsar el cambio y reflexionar sobre el impacto que generamos en el mundo que nos rodea. Porque para nosotros, el deporte no es simplemente una actividad, es una forma de vida.
+        At Horus, we support visionaries and those who challenge boundaries. We are committed to driving change and reflecting on the impact we make on the world around us. Because for us, sports are not just an activity, they are a way of life.
         <br>
         <br>
-        Horus ha sido un referente para corredores, basquetbolistas, futbolistas y entusiastas del fitness en todos los rincones del mundo. Ya sea en las calles urbanas o en los senderos montañosos, nuestros productos han sido diseñados para inspirar y potenciar el desempeño de quienes los utilizan. Ya sea que busques superar tus límites personales o simplemente disfrutar de una vida activa y saludable, Horus está aquí para acompañarte en cada paso del camino.</p>
+        Horus has been a reference point for runners, basketball players, soccer players, and fitness enthusiasts in every corner of the world. Whether in urban streets or mountain trails, our products have been designed to inspire and enhance the performance of those who use them. Whether you seek to surpass your personal limits or simply enjoy an active and healthy lifestyle, Horus is here to accompany you every step of the way.
     </div>
   </div>
 </div>
