--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -98,11 +98,20 @@ p, h1, h2 {
   max-width: 1300px;
   margin: 0 auto;
   padding: 0 10px;
-  background-color: #f5f5e5;
+  position: relative;
 }
 
-
-
+.grid-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100vw;
+  height: 100%;
+  background-color: #f5f5e5;
+  z-index: -1;
+}
 
 .column {
   padding: 20px;
