--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -26,7 +26,7 @@
         <div class="group lg:gap-5 gap-1 pr-4 flex items-center">
           <form action="" class="relative flex">
               <div class="container">
-                  <input [(ngModel)]="filteredProducts" type="text" name="text" class="input" required="" placeholder="Busqueda..." (keyup.enter)="searchProducts()">
+                  <input [(ngModel)]="filteredProducts" type="text" name="text" class="input" required="" placeholder="Search..." (keyup.enter)="searchProducts()">
                   <div  class="icon" (click)="searchProducts()">
                       <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
                           <title>Search</title>
@@ -58,7 +58,7 @@
         </div>
 
         <a href="" href="" class="hidden lg:inline-flex items-center justify-center rounded-xl bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm transition-all duration-150 hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
-        routerLink="/shop">Catalogo</a>
+        routerLink="/shop">Catalog</a>
 
         </div>
       </div>
