--- a/src/app/components/shop/details/details.component.html
+++ b/src/app/components/shop/details/details.component.html
@@ -31,8 +31,8 @@
 
         <div class="flex pt-8">
           <span class="title-font font-medium text-2xl text-gray-900">{{ productDetails.price | currency }}</span>
-          <button routerLink="/home" class="flex ml-auto text-white bg-gray-600 border-0 py-2 px-4 sm:px-6 font-semibold focus:outline-none hover:bg-gray-500 rounded-xl small-button">Volver</button>
-          <button (click)="addCart(productDetails)" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-4 sm:px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl small-button">Agregar al carrito</button>
+          <button routerLink="/home" class="flex ml-auto text-white bg-gray-600 border-0 py-2 px-4 sm:px-6 font-semibold focus:outline-none hover:bg-gray-500 rounded-xl small-button">Back</button>
+          <button (click)="addCart(productDetails)" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-4 sm:px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl small-button">Add cart</button>
         </div>
       </div>
     </div>
@@ -73,8 +73,8 @@
 
           <div class="flex pt-8">
             <span class="title-font font-medium text-2xl text-gray-900">{{ detailProducts.price | currency }}</span>
-            <button routerLink="/home" class="flex ml-auto text-white bg-gray-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-gray-500 rounded-xl">Volver</button>
-            <button (click)="addCart(detailProducts)" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl">Agregar al carrito</button>
+            <button routerLink="/home" class="flex ml-auto text-white bg-gray-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-gray-500 rounded-xl">Back</button>
+            <button (click)="addCart(detailProducts)" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl">Add Cart</button>
           </div>
         </div>
       </div>
@@ -102,11 +102,11 @@
                 </div>
                 <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                     <h3 class="text-lg leading-6 font-medium text-gray-900">
-                        Agregado al carrito!
+                        ADDED TO CART!
                     </h3>
                     <div class="mt-2">
                         <p class="text-sm leading-5 text-gray-500">
-                            Se ha agregado al carrito {{ productDetails?.title || detailProducts?.title  }}
+                          Added to cart {{ productDetails?.title || detailProducts?.title  }}
                         </p>
                     </div>
                 </div>
