--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,10 +1,10 @@
 <!-- header -->
 
-<header class="header pt-7">
+<section class="header pt-7">
   <div class="container-xl">
-    <div class="grid grid-cols-1 md:grid-cols-2 space-img">
-      <div class="md:col-span-1 flex justify-center order-2 md:order-1 pb-12">
-        <div class="text-container p-4 md:pl-7 lg:pl-20 flex flex-col justify-center h-full mb-5">
+    <div class="grid grid-cols-1 md:grid-cols-2 space-img pl-20">
+      <div class="md:col-span-1 flex justify-center order-2 md:order-1 sm:pb-12 pb-12">
+        <div class="text-container p-4 md:pl-7 lg:pl-20 flex flex-col justify-center mb-5">
           <h1 class="text-4xl font-bold">Featuring the New Watch of Tomorrow</h1>
           <p class="text-lg text-secondary mt-4">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi eos debitis nostrum hic earum, accusantium quibusdam expedita. Sit et dolorem ex, ratione similique laboriosam.
@@ -19,7 +19,7 @@
       </div>
     </div>
   </div>
-</header>
+</section>
 
 
 
