--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,7 +2,7 @@
 
 <section class="header pt-7">
   <div class="container-xl">
-    <div class="grid grid-cols-1 md:grid-cols-2 space-img pl-20">
+    <div class="grid grid-cols-1 md:grid-cols-2 space-img">
       <div class="md:col-span-1 flex justify-center order-2 md:order-1 sm:pb-12 pb-12">
         <div class="text-container p-4 md:pl-7 lg:pl-20 flex flex-col justify-center mb-5">
           <h1 class="text-4xl font-bold">Featuring the New Watch of Tomorrow</h1>
