--- a/src/app/components/main-page/card-secondary/card-secondary.component.html
+++ b/src/app/components/main-page/card-secondary/card-secondary.component.html
@@ -7,7 +7,7 @@
       </svg>
     </button>
     <div class="w-full h-full mx-auto overflow-x-hidden overflow-y-hidden">
-      <swiper-container slides-per-view="3" speed="500" loop="true" id="slider" class="h-full flex lg:gap-8 md:gap-6 gap-14 items-center justify-start transition ease-out duration-700 swiper-slide">
+      <swiper-container slides-per-view="1" speed="300"  id="slider" class="h-full flex lg:gap-8 md:gap-6 gap-14 items-center justify-start transition ease-out duration-700 swiper-slide">
         <swiper-slide *ngFor="let merch of merchList" (click)="detailMerch(merch.id)" class="flex flex-shrink-0 relative w-full sm:w-auto card-image">
           <img [src]="merch.image" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem; padding: 50px;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
