added spec test

--- a/src/app/components/shop/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shop/shopping-cart/shopping-cart.component.html
@@ -58,7 +58,7 @@
           <p class="text-sm text-gray-700">including IVA</p>
         </div>
       </div>
-      <button class="mt-6 w-full rounded-md bg-blue-500 py-1.5 font-medium text-blue-50 hover:bg-blue-600">Check out</button>
+      <button (click)="onClickCheckout()" class="mt-6 w-full rounded-md bg-blue-500 py-1.5 font-medium text-blue-50 hover:bg-blue-600">Check out</button>
       <div class="sm:pl-0 flex flex-col items-center justify-center">
         <p class="text-center text-lg mt-6 whitespace-normal lg:whitespace-nowrap">Aceptamos todos los medios de pagos</p>
         <img src="https://www.comafi.com.ar/Multimedios/imgs/900_540.jpg" alt="pagos" class="mx-auto">
